Reconstructed the update checker